--- a/bgstartup.service
+++ b/bgstartup.service
@@ -2,7 +2,7 @@
 Description=Bg Startup
 
 [Service]
-ExecStart=/usr/local/sbin/bgstartup.sh $USER
+ExecStart=/usr/local/sbin/bgstartup.sh "%H"
 Restart=on-failure
 RestartSec=1s
 
